objects/MDPERSONATOR__MD_globalPhoneResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__AdministrativeArea__c</fullName>
        <label>AdministrativeArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CallerID__c</fullName>
        <label>CallerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Carrier__c</fullName>
        <label>Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryAbbreviation__c</fullName>
        <label>CountryAbbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryName__c</fullName>
        <label>CountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DST__c</fullName>
        <label>DST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__InternationalPhoneNumber__c</fullName>
        <label>InternationalPhoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Locality__c</fullName>
        <label>Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCountryDialingCode__c</fullName>
        <label>PhoneCountryDialingCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneInternationalPrefix__c</fullName>
        <label>PhoneInternationalPrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNationPrefix__c</fullName>
        <label>PhoneNationPrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNationalDestinationCode__c</fullName>
        <label>PhoneNationalDestinationCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneSubscriberNumber__c</fullName>
        <label>PhoneSubscriberNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Suggestions__c</fullName>
        <label>Suggestions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TimeZoneCode__c</fullName>
        <label>TimeZoneCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TimeZoneName__c</fullName>
        <label>TimeZoneName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UTC__c</fullName>
        <label>UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite Global Phone Result</label>
    <nameField>
        <label>Clean Suite Global Phone Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite Global Phone Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>